package com.daou.shoppingmall.entity;

public enum UseStatus {
    USED, UNUSED
}
